<!--Gillian Dunne X00094469-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <EditText
        android:id="@+id/numOfNumbersEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numOfNumbersTextView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/default_num_of_numbers_label" >
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/numOfNumbersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numOfNumbersEditText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/num_of_numbers_label" />

    <EditText
        android:id="@+id/maxNumbersEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/maxNumbersTextView"
        android:ems="10"
        android:text="@string/default_max_numbers_label"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/maxNumbersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/maxNumbersEditText"
        android:layout_below="@+id/numOfNumbersEditText"
        android:layout_marginTop="26dp"
        android:text="@string/max_numbers_label" />

    <Button
        android:id="@+id/generateNumbersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maxNumbersEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:onClick="generateNums"
        android:text="@string/generate"/>

    <TextView
        android:id="@+id/generatedNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generateNumbersButton"
        android:layout_marginTop="26dp"
        android:text="@string/generatedNumbers_label" />

    <TextView
        android:id="@+id/numbersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generateNumbersButton"
        android:layout_toRightOf="@+id/generatedNumTextView"
        android:layout_marginTop="26dp" />

</RelativeLayout>
